Creando modulo para el multi select de PrimeNG

--- a/src/app/shared/ui/prime-ng/multi-select/multi-select.component.html
+++ b/src/app/shared/ui/prime-ng/multi-select/multi-select.component.html
@@ -6,7 +6,7 @@
             [ngStyle]="{'width.px': labelWidth}"
             [class.p-error]="!fg.controls[control].valid && fg.controls[control].dirty">{{ label }}: 
         </label>
-        <p-dropdown [inputId]="control" 
+        <p-multiSelect [inputId]="control" 
             [options]="optionsValues" 
             [formControlName]="control" 
             optionLabel="label" 
@@ -15,9 +15,8 @@
             [filter]="filter" 
             filterBy="label" 
             [required]="required" 
-            [disabled]="disabled" 
-            [showClear]="showClear">
-        </p-dropdown>
+            [disabled]="disabled">
+        </p-multiSelect>
         <label *ngIf="floatLabel" [for]="control">{{ label }}</label>
     </div>
     <small *ngIf="!fg.controls[control].valid && fg.controls[control].dirty" id="username2-help" class="p-error">Este campo es obligatorio</small>
