--- a/src/app/clasificador-cuenta/clasificador-cuenta-form/clasificador-cuenta-form.component.html
+++ b/src/app/clasificador-cuenta/clasificador-cuenta-form/clasificador-cuenta-form.component.html
@@ -1,32 +1,32 @@
-<app-modal [title]="action + ' Cuenta'" [fg]="fg" (saveClicked)="save()">
+<app-add-edit-item [fg]="fg" (actionClicked)="onActionClicked($event)">
   <form [formGroup]="fg">
-    <div class="form__group m-t-10">
-      <am-select class="w-100" label="Tipo de Clasificador" [fg]="fg" control="tipoClasificador" [values]="tipoClasificadorValues" [required]="true" autocomplete="off"></am-select>
+    <div class="form__group mt-1">
+      <png-dropdown class="w-full mt-1" [fg]="fg" control="tipoClasificador" label="Tipo de Clasificador" [optionsValues]="tipoClasificadorValues" placeholder="&lt;Tipo de Clasificador&gt;" [required]="true" [filter]="true" [showClear]="true"></png-dropdown>
     </div>
     <div class="form__group">
-      <am-input class="w-100" label="Cuenta" [fg]="fg" control="cuenta" [required]="true" autocomplete="off"></am-input>
-      <am-input class="w-100 m-l-10" label="CubCuenta" [fg]="fg" control="subcuenta" [required]="true" autocomplete="off"></am-input>
+      <png-input-text class="w-full mt-1" label="Cuenta" [fg]="fg" control="cuenta" [required]="true" autocomplete="off"></png-input-text>
+      <png-input-text class="w-full mt-1 ml-3" label="CubCuenta" [fg]="fg" control="subcuenta" [required]="true" autocomplete="off"></png-input-text>
     </div>
     <div class="form__group">
-      <am-input class="w-100" label="Descripción" [fg]="fg" control="descripcion" [required]="true" autocomplete="off"></am-input>
+      <png-input-text class="w-full mt-1" label="Descripción" [fg]="fg" control="descripcion" [required]="true" autocomplete="off"></png-input-text>
     </div>
     <div class="form__group">
-      <am-select class="w-60" label="Naturaleza" [fg]="fg" control="naturaleza" [values]="naturalezaValues" [required]="true" autocomplete="off"></am-select>
-      <am-checkbox class="flex m-l-20 m-t-10" label="Terminal" [fg]="fg" control="terminal"></am-checkbox>
-      <am-checkbox class="flex m-l-20 m-t-10" label="Obligación" [fg]="fg" control="obligacion"></am-checkbox>
+      <png-dropdown class="w-full mt-1" [fg]="fg" control="naturaleza" label="Naturaleza" [optionsValues]="naturalezaValues" placeholder="&lt;Naturaleza&gt;" [required]="true" [filter]="true" [showClear]="true"></png-dropdown>
+      <png-checkbox class="mt-1 ml-3" [fg]="fg" control="terminal" label="Terminal"></png-checkbox>
+      <png-checkbox class="mt-1 ml-3" [fg]="fg" control="obligacion" label="Obligación"></png-checkbox>
     </div>
     <div class="form__group">
-      <am-input label="Crit1" [fg]="fg" control="crit1" autocomplete="off"></am-input>
-      <am-input class="m-l-10" label="Crit2" [fg]="fg" control="crit2" autocomplete="off"></am-input>
-      <am-input class="m-l-10" label="Crit3" [fg]="fg" control="crit3" autocomplete="off"></am-input>
+      <png-input-text class="w-full mt-1" label="Crit1" [fg]="fg" control="crit1" autocomplete="off"></png-input-text>
+      <png-input-text class="w-full mt-1 ml-3" label="Crit2" [fg]="fg" control="crit2" autocomplete="off"></png-input-text>
+      <png-input-text class="w-full mt-1 ml-3" label="Crit3" [fg]="fg" control="crit3" autocomplete="off"></png-input-text>
     </div>
     <div class="form__group">
-      <am-select class="w-100" label="Se utiliza en" [fg]="fg" control="seUtiliza" [values]="tipoUnidadesValues" [multiple]="true" [required]="true" autocomplete="off"></am-select>
+      <png-multi-select class="w-full mt-1" [fg]="fg" control="seUtiliza" label="Se utiliza en" [optionsValues]="tipoUnidadesValues" placeholder="&lt;Se utiliza en&gt;" [required]="true" [filter]="true"></png-multi-select>
     </div>
     <div class="form__group">
-      <am-input label="Crit1 Consolidación" [fg]="fg" control="crit1Consolidacion" autocomplete="off"></am-input>
-      <am-input class="m-l-10" label="Crit2 Consolidación" [fg]="fg" control="crit2Consolidacion" autocomplete="off"></am-input>
-      <am-input class="m-l-10" label="Crit3 Consolidación" [fg]="fg" control="crit2Consolidacion" autocomplete="off"></am-input>
+      <png-input-text class="w-full mt-1" label="Crit1 Consolidación" [fg]="fg" control="crit1Consolidacion" autocomplete="off"></png-input-text>
+      <png-input-text class="w-full mt-1 ml-3" label="Crit2 Consolidación" [fg]="fg" control="crit2Consolidacion" autocomplete="off"></png-input-text>
+      <png-input-text class="w-full mt-1 ml-3" label="Crit3 Consolidación" [fg]="fg" control="crit3Consolidacion" autocomplete="off"></png-input-text>
     </div>
   </form>
-</app-modal>
+</app-add-edit-item>
