--- a/src/app/elementos-gastos/elementos-gastos-form/elementos-gastos-form.component.html
+++ b/src/app/elementos-gastos/elementos-gastos-form/elementos-gastos-form.component.html
@@ -1,20 +1,20 @@
-<app-modal [title]="action + ' Elemento de Gasto'" [fg]="fg" (saveClicked)="save()">
-  <form class="epigrafe-form" [formGroup]="fg">
-    <div class="form__group m-t-10">
-      <am-input class="w-100" label="Elemento" [fg]="fg" control="elemento" [required]="true" autocomplete="off"></am-input>
-      <am-input class="w-100 m-l-10" label="Descripción" [fg]="fg" control="descripcion" [required]="true" autocomplete="off"></am-input>
+<app-add-edit-item [fg]="fg" (actionClicked)="onActionClicked($event)">
+  <form class="epigrafe-form">
+    <div class="form__group">
+      <png-input-text class="w-4" label="Elemento" labelWidth="90" [fg]="fg" control="elemento" [required]="true" autocomplete="off"></png-input-text>
+      <png-input-text class="w-8 ml-3" label="Descripción" labelWidth="90" [fg]="fg" control="descripcion" [required]="true" autocomplete="off"></png-input-text>
     </div>
     <div class="form__group">
-      <am-input class="w-100" label="Uso y Contenido" [fg]="fg" control="usoContenido" autocomplete="off"></am-input>
+      <png-input-text class="w-full" label="Uso y Contenido" labelWidth="90" [fg]="fg" control="usoContenido" [required]="true" autocomplete="off"></png-input-text>
     </div>
     <div class="form__group">
-      <am-select class="w-100" label="Cuentas Asociadas" [fg]="fg" control="cuentaAsociada" [values]="cuentasValues" [multiple]="true"></am-select>
+      <png-multi-select class="w-full mt-1" [fg]="fg" control="cuentaAsociada" label="Cuentas Asociadas" labelWidth="90" [optionsValues]="cuentasValues" placeholder="&lt;Cuentas Asociadas&gt;" [required]="true" [filter]="true"></png-multi-select>
     </div>
     <div class="form__group">
-      <am-select class="w-100" label="Tipos de Entidad" [fg]="fg" control="tipoEntidad" [values]="tipoEntidadValues" [multiple]="true"></am-select>
+      <png-multi-select class="w-full mt-1" [fg]="fg" control="tipoEntidad" label="Tipos de Entidad" labelWidth="90" [optionsValues]="tipoEntidadValues" placeholder="&lt;Cuentas Asociadas&gt;" [required]="true" [filter]="true"></png-multi-select>
     </div>
     <div class="form__group">
-      <am-select class="w-100" label="Epígrafe" [fg]="fg" control="epigrafe" [values]="epigrafesValues" [required]="true"></am-select>
+      <png-dropdown class="w-full mt-1" [fg]="fg" control="epigrafe" label="Epígrafe" labelWidth="90" [optionsValues]="epigrafesValues" placeholder="&lt;Epígrafe&gt;" [required]="true" [filter]="true" [showClear]="true"></png-dropdown>
     </div>
   </form>
-</app-modal>
+</app-add-edit-item>
