--- a/src/app/epigrafes/epigrafes-form/epigrafes-form.component.html
+++ b/src/app/epigrafes/epigrafes-form/epigrafes-form.component.html
@@ -1,7 +1,7 @@
-<app-modal [title]="action + ' Epígrafe'" [fg]="fg" (saveClicked)="save()">
-  <form class="epigrafe-form" [formGroup]="fg">
-    <div class="form__group m-t-10">
-      <am-input class="w-100" label="Epígrafe" [fg]="fg" control="epigrafe" [required]="true" autocomplete="off"></am-input>
+<app-add-edit-item [fg]="fg" (actionClicked)="onActionClicked($event)">
+  <form class="epigrafe-form" [formGroup]="fg" style="width: 400px;">
+    <div class="form__group">
+      <png-input-text class="w-full" label="Epígrafe" labelWidth="90" [fg]="fg" control="epigrafe" [required]="true" autocomplete="off"></png-input-text>
     </div>
   </form>
-</app-modal>
+</app-add-edit-item>
