Se actualiza el modulo de Tipo Entidades.

--- a/src/app/tipo-entidades/tipo-entidades-form/tipo-entidades-form.component.html
+++ b/src/app/tipo-entidades/tipo-entidades-form/tipo-entidades-form.component.html
@@ -1,10 +1,10 @@
-<app-modal [title]="action + ' Tipo de Entidad'" [fg]="fg" (saveClicked)="save()">
-  <form [formGroup]="fg">
-    <div class="form__group m-t-10">
-      <am-input class="w-100" label="Entidad" [fg]="fg" control="entidades" [required]="true" autocomplete="off"></am-input>
+<app-add-edit-item [fg]="fg" (actionClicked)="onActionClicked($event)">
+  <form [formGroup]="fg" style="width: 350px;">
+    <div class="form__group">
+      <png-input-text class="w-full mt-1" label="Entidad" labelWidth="90" [fg]="fg" control="entidades" [required]="true" autocomplete="off"></png-input-text>
     </div>
     <div class="form__group">
-      <am-input class="w-100" label="Descripción" [fg]="fg" control="descripcion" [required]="true" autocomplete="off"></am-input>
+      <png-input-text class="w-full mt-1" label="Descripción" labelWidth="90" [fg]="fg" control="descripcion" [required]="true" autocomplete="off"></png-input-text>
     </div>
   </form>
-</app-modal>
+</app-add-edit-item>
