--- a/src/app/tipo-entidades/list-tipo-entidades/list-tipo-entidades.component.html
+++ b/src/app/tipo-entidades/list-tipo-entidades/list-tipo-entidades.component.html
@@ -1,3 +1,5 @@
 <app-list-item title="Tipos de Entidad">
-  <am-table [columns]="displayedColumns" [data]="dataSource" [menuItems]="menuItems" (clickAction)="onClicked($event)"></am-table>
+  <png-table [columns]="displayedColumns" [data]="dataSource" [canEditDelete]="hasAdvancedUserPermission()" (actionClicked)="actionClicked($event)"></png-table>
 </app-list-item>
+
+<p-toast></p-toast>
