--- a/src/app/shared/ui/prime-ng/prime-ng.scss
+++ b/src/app/shared/ui/prime-ng/prime-ng.scss
@@ -67,6 +67,10 @@
     font-size: inherit !important;
 }
 
+.p-datatable .p-datatable-loading-icon {
+    font-size: 2rem !important;
+}
+
 .p-dropdown .p-dropdown-trigger, .p-multiselect-trigger {
     width: 2rem !important;
 }
