--- a/src/app/conexion-rodas/list-conexion-rodas/list-conexion-rodas.component.html
+++ b/src/app/conexion-rodas/list-conexion-rodas/list-conexion-rodas.component.html
@@ -1,5 +1,5 @@
 <app-list-item title="Conexiones al Rodas">
-  <png-table [columns]="columns" [data]="conexionesRodas" [canEditDelete]="hasAdminPermission()" (actionClicked)="actionClicked($event)"></png-table>
+  <png-table [columns]="columns" [data]="conexionesRodas" [loading]="loading" [canEditDelete]="hasAdminPermission()" (actionClicked)="actionClicked($event)"></png-table>
 </app-list-item>
 
 <p-toast></p-toast>
