- Se actualiza el modulo de las Expresiones. - Se elimina el Modal Service y se utiliza el Dinamic Dialog Service de PrimeNG.

--- a/src/app/expresiones/list-expresiones/list-expresiones.component.html
+++ b/src/app/expresiones/list-expresiones/list-expresiones.component.html
@@ -1,3 +1,5 @@
 <app-list-item title="Expresiones">
-  <png-table [columns]="columns" [data]="expresiones" [canEditDelete]="true"></png-table>
+  <png-table [columns]="columns" [data]="expresiones" [canEditDelete]="true" (actionClicked)="actionClicked($event)"></png-table>
 </app-list-item>
+
+<p-toast></p-toast>
