--- a/src/app/shared/ui/prime-ng/password/password.component.html
+++ b/src/app/shared/ui/prime-ng/password/password.component.html
@@ -16,6 +16,6 @@
         </p-password>
         <label *ngIf="floatLabel" [for]="control">{{ label }}</label>
     </span>
-    <small *ngIf="fg.controls[control].invalid && fg.controls[control].errors?.['required'] && (fg.controls[control].dirty || fg.controls[control].touched)" class="p-error">Este campo es obligatorio.</small>
+    <small *ngIf="fg.controls[control].invalid && fg.controls[control].errors?.['required'] && fg.controls[control].dirty" class="p-error">Este campo es obligatorio.</small>
     <small *ngIf="fg.controls[control].invalid && fg.controls[control].errors?.['minLength']" class="p-error">Introduzca más caracteres.</small>
 </div>
