--- a/src/assets/styles/app/form.scss
+++ b/src/assets/styles/app/form.scss
@@ -14,8 +14,8 @@
     &__group {
         position: relative;
         display: flex;
-        flex: 1;
-        flex-direction: row;
+        // flex: 1;
+        // flex-direction: row;
         padding: 0 .2rem .5rem .2rem;
         // margin-bottom: 0.5rem;
     }  
