--- a/src/app/expresiones/expresiones-form/expresiones-form.component.html
+++ b/src/app/expresiones/expresiones-form/expresiones-form.component.html
@@ -1,12 +1,12 @@
 <app-add-edit-item [fg]="fg" (actionClicked)="onActionClicked($event)">
   <form class="flex" [formGroup]="fg">
-    <div class="form__group flex flex-column">
-      <png-input-text class="w-100 mt-1" label="Expresión" labelWidth="90" [fg]="fg" control="expresion" [required]="true" autocomplete="off"></png-input-text>
-      <png-input-text class="w-100 mt-2" label="Descripción" labelWidth="90" [fg]="fg" control="descripcion" autocomplete="off"></png-input-text>
+    <div class="form__group flex-column w-9">
+      <png-input-text class="w-full mt-1" label="Expresión" labelWidth="90" [fg]="fg" control="expresion" [required]="true" autocomplete="off"></png-input-text>
+      <png-input-text class="w-full mt-2" label="Descripción" labelWidth="90" [fg]="fg" control="descripcion" autocomplete="off"></png-input-text>
     </div>
-    <div class="form__group ml-3 flex flex-column">
-      <png-checkbox class="mr-3" [fg]="fg" control="acumulado" label="Acumulado"></png-checkbox>
-      <png-checkbox [fg]="fg" control="operacionesInternas" label="Operaciones Internas"></png-checkbox>
+    <div class="form__group ml-3 mt-1 flex-column">
+      <png-checkbox [fg]="fg" control="acumulado" label="Acumulado"></png-checkbox>
+      <png-checkbox class="mt-2" [fg]="fg" control="operacionesInternas" label="Operaciones Internas"></png-checkbox>
     </div>
   </form>
   <p-card> 
@@ -24,10 +24,10 @@
           <th style="width:4rem">Signo</th>
           <th style="width:4rem">PorCiento</th>
           <th style="width:4rem">TipoValor</th>
-          <th style="width:8rem"></th>
+          <th style="width:6rem"></th>
         </tr>
       </ng-template>
-      <ng-template pTemplate="body" let-expresion="expresion" let-editing="editing" let-ri="rowIndex">
+      <ng-template pTemplate="body" let-expresion let-editing="editing" let-ri="rowIndex">
         <tr [pEditableRow]="expresion">
           <td>
             <p-cellEditor>
