--- a/src/app/comparar-expresiones/list-comparar-expresiones/list-comparar-expresiones.component.html
+++ b/src/app/comparar-expresiones/list-comparar-expresiones/list-comparar-expresiones.component.html
@@ -1,3 +1,5 @@
 <app-list-item title="Comparación de Expresiones">
-  <png-table [columns]="columns" [data]="compararExpresiones" [canEditDelete]="true"></png-table>
+  <png-table [columns]="columns" [data]="compararExpresiones" [canEditDelete]="true" (actionClicked)="actionClicked($event)"></png-table>
 </app-list-item>
+
+<p-toast></p-toast>
