Actualizando el modulo de Cuentas no Permitidas.

--- a/src/app/cuentas-no-permitidas/list-cuentas-no-permitidas/list-cuentas-no-permitidas.component.html
+++ b/src/app/cuentas-no-permitidas/list-cuentas-no-permitidas/list-cuentas-no-permitidas.component.html
@@ -1,3 +1,5 @@
 <app-list-item title="Cuentas no Permitidas">
-  <png-table [columns]="columns" [data]="cuentasNoPermitidas" [canEditDelete]="true" [loading]="loading"></png-table>
+  <png-table [columns]="columns" [data]="cuentasNoPermitidas" [canEditDelete]="true" [loading]="loading" (actionClicked)="actionClicked($event)"></png-table>
 </app-list-item>
+
+<p-toast></p-toast>
