--- a/src/app/shared/ui/prime-ng/table/table.component.html
+++ b/src/app/shared/ui/prime-ng/table/table.component.html
@@ -22,6 +22,7 @@
     [loading]="loading" 
     expandableRowGroups="true"
     expandableRows="true"
+    [resizableColumns]="resizableColumns"
     [showCurrentPageReport]="true" 
     currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} registros"
     [globalFilterFields]="getFields()">
@@ -70,9 +71,9 @@
 
     <ng-template *ngIf="groupField" pTemplate="groupheader" let-rowData let-expanded="expanded">
         <tr pRowGroupHeader>
-            <td colspan="12" class="flex align-items-center">
+            <td colspan="12" class="relative">
                 <button *ngIf="expandible" type="button" pButton pRipple [pRowToggler]="rowData" class="p-button-text p-button-rounded p-button-plain mr-2" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
-                <span class="font-bold">{{ _(rowData, groupField) }}</span>
+                <span [ngClass]="{'absolute mt-2': expandible}" class="font-bold">{{ _(rowData, groupField) }}</span>
             </td>
         </tr>
     </ng-template>
