--- a/src/app/concilia-contabilidad/concilia-contabilidad.component.html
+++ b/src/app/concilia-contabilidad/concilia-contabilidad.component.html
@@ -1,6 +1,7 @@
 <png-progress-spinner *ngIf="loading"></png-progress-spinner>
+
 <div class="content">
-  <png-panel class="h-full w-fu;;" header="Contabildad">
+  <png-panel class="h-full w-full" header="Contabildad">
     <form [formGroup]="fg">
       <div class="flex p-1">
         <png-card>
