Correcciones internas en los formularios

--- a/src/app/clasificador-cuenta/clasificador-cuenta-form/clasificador-cuenta-form.component.html
+++ b/src/app/clasificador-cuenta/clasificador-cuenta-form/clasificador-cuenta-form.component.html
@@ -21,7 +21,7 @@
       <png-input-text class="w-full mt-1 ml-3" label="Crit3" [fg]="fg" control="crit3" autocomplete="off"></png-input-text>
     </div>
     <div class="form__group">
-      <png-multi-select class="w-full mt-1" [fg]="fg" control="seUtiliza" label="Se utiliza en" [optionsValues]="tipoUnidadesValues" placeholder="&lt;Se utiliza en&gt;" [required]="true" [filter]="true"></png-multi-select>
+      <png-multi-select class="w-full mt-1" [fg]="fg" control="seUtiliza" label="Se utiliza en" [optionsValues]="tipoUnidadesValues" placeholder="&lt;Se utiliza en&gt;" [filter]="true"></png-multi-select>
     </div>
     <div class="form__group">
       <png-input-text class="w-full mt-1" label="Crit1 Consolidación" [fg]="fg" control="crit1Consolidacion" autocomplete="off"></png-input-text>
