--- a/src/app/concilia-golden-dwh/concilia-golden-dwh.component.html
+++ b/src/app/concilia-golden-dwh/concilia-golden-dwh.component.html
@@ -175,7 +175,7 @@
       </p-tabView>
       <div class="item__footer mt-2">
         <png-button class="m-r-10 m-b-10" label="Conciliar" icon="pi-check" tooltip="Calcular la Conciliación." [raised]="true" [disabled]="!fg.valid" (clicked)="conciliar()"></png-button>
-        <png-button class="m-r-10 m-b-10" label="Reporte" [raised]="true" icon="pi-print" [disabled]="dataSourceInventario.length === 0" (clicked)="reporte()"></png-button>
+        <png-button class="m-r-10 m-b-10" label="Reporte" [style]="'secondary'" [raised]="true" icon="pi-print" [disabled]="dataSourceInventario.length === 0" (clicked)="reporte()"></png-button>
       </div>
     </div>
   </png-panel>
